# html-desktop-shell

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md
docs/: frontend-owned-ui-plan.md  html-desktop-shell-feature-roadmap.md  html-desktop-shell-plan.md  html-desktop-shell-roadmap-plan.md
examples/plain-html/: index.html  shell.css
examples/plain-html/js/: app.js  bridge.js
packaging/: PKGBUILD  html-desktop-shell.default.toml  html-desktop-shell.service  niri-spawn-html-desktop-shell.kdl
scripts/: smoke-current-niri.sh
src/: assets.rs  bridge.rs  config.rs  diagnostics.rs  main.rs  messages.rs  shell_host.rs  shell_window.rs
src/providers/: mod.rs  system.rs
test/: measure-html-shell.sh  niri-kvm-guest.kdl  niri-tty2-host.kdl  panel-default.toml  panel-test.toml
web/: index.html  package.json  shell.css  shell.js  tsconfig.json  vite.config.ts
web/js/: app.js  bridge.js  clock.js
web/src/: i18n.ts  layout.ts  main.ts  router.ts  styles.css  view-model.test.ts  view-model.ts
web/src/composables/: useShellPolling.ts
web/src/plugins/: primevue.ts
web/src/stores/: shell.ts
web/src/views/: PanelView.vue
web/src/widgets/: ActionStatusWidget.vue  AppNameWidget.vue  BatteryWidget.vue  BridgeStatusWidget.vue  ClockWidget.vue  FocusedWindowWidget.vue  NetworkWidget.vue  WorkspacesWidget.vue  types.ts
